--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -22,11 +22,11 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
   [
     {
       "title": "Case Priority",
-      "description": "L&I defined description of the type of investigation",
+      "description": "L&I priority level of the type of violation found.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "case_investigations",
-      "chartType": "pie",
+      "chartType": "bar",
       "groupBy": "casepriority"
     },
     {
