--- a/pages/li-complaints.html
+++ b/pages/li-complaints.html
@@ -66,7 +66,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6d5c4ae4cd66d3ff
       "triggerField": "casestatus",
       "baseFilters": [
         {
-          "field": "current_week",
+          "field": "casestatus",
           "expression": {
             "type": "is not",
             "value": null
