--- a/pages/li-complaints.html
+++ b/pages/li-complaints.html
@@ -53,7 +53,16 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6d5c4ae4cd66d3ff
       "domain": "phl.carto.com",
       "dataset": "complaints",
       "chartType": "bar",
-      "groupBy": "complaintstatus"
+      "groupBy": "complaintstatus",
+      "baseFilters": [
+        {
+          "field": "complaintstatus",
+          "expression": {
+            "type": "is not",
+            "value": null
+       	 }
+       }
+     ]
     },
     {
       "title": "Case Status",
