--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -36,7 +36,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
       "domain": "phl.carto.com",
       "dataset": "clean_seal",
       "chartType": "pie",
-      "groupBy": "casepriority"
+      "groupBy": "casepriority",
       "baseFilters": [
         {
           "field": "casepriority",
