--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -15,7 +15,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
       "domain": "phl.carto.com",
       "dataset": "clean_seal",
       "chartType": "datetime",
-      "groupBy": "date_trunc('month', issuedate)",
+      "groupBy": "date_trunc('month', workordercompleteddate)",
       "triggerField": "workordercompleteddate"
     }
 ],
