--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -22,7 +22,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
           "field": "casestatus",
           "expression": {
             "type": "is not",
-            "value": null
+            "value": ""
          }
        }
      ]
