--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -9,23 +9,14 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
 [
   [
     {
-      "title": "Work Order Completion Date",
-      "description": "When the work order was completed.",
+      "title": "Case Created Date",
+      "description": "When the case was created.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "clean_seal",
       "chartType": "datetime",
-      "groupBy": "date_trunc('month', casecompleteddate)",
-      "triggerField": "casecompleteddate"
-      "baseFilters": [
-        {
-          "field": "casestatus",
-          "expression": {
-            "type": "is not",
-            "value": ""
-         }
-       }
-     ]
+      "groupBy": "date_trunc('month', casecreateddate)",
+      "triggerField": "casecreateddate"
     }
 ],
   [
