remove plus sign
standardize L&I

--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -9,7 +9,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8c
   [
     {
       "title": "Demolition Date",
-      "description": "Date building permit or L+I contractor bid was closed.",
+      "description": "Date building permit or L&I contractor bid was closed.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "demolitions",
@@ -41,7 +41,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8c
     },
     {
       "title": "Demolition Type",
-      "description": "The type of demolition. 'Permit' means a demolition was an action of a private owner, who was issued a building permit from L+I. 'Violation Case' means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code.",
+      "description": "The type of demolition. 'Permit' means a demolition was an action of a private owner, who was issued a building permit from L&I. 'Violation Case' means the demolition was an action of the Department of License and Inspections, due to dangerous building conditions, as a result of violation of the city's building code.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "demolitions",
