--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -1,7 +1,7 @@
 ---
 title: L&I Demolitions
 description: |
-  <p>Inventory of building demolitions occurring within the City of Philadelphia. This includes both demolitions performed by private owners/contractors and by the Dpt of Licenses and Inspections due to dangerous building conditions</p>
+  <p>Inventory of building demolitions occurring within the City of Philadelphia. This includes both demolitions performed by private owners/contractors and by the Department of Licenses and Inspections due to dangerous building conditions</p>
 download: https://www.opendataphilly.org/dataset/building-demolitions
 metadata: https://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8cad/representationdetails/5e989bd68d478300195737b0/
 ---
