--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -15,7 +15,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
       "domain": "phl.carto.com",
       "dataset": "case_investigations",
       "chartType": "datetime",
-      "groupBy": "date_trunc('month', inspectioncompleted)",
+      "groupBy": "date_trunc('month', investigationcompleted)",
       "triggerField": "investigationcompleted"
     }
   ],
