--- a/pages/li-commercial-activity-licenses.html
+++ b/pages/li-commercial-activity-licenses.html
@@ -46,7 +46,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff
       "domain": "phl.carto.com",
       "dataset": "com_act_licenses",
       "chartType": "bar",
-      "groupBy": "companyname"
+      "groupBy": "companyname",
     }
     "baseFilters": [
       {
