--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -9,15 +9,24 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
 [
   [
     {
-      "title": "Case Created Date",
-      "description": "When the case was created.",
+      "title": "Work Order Completed Date",
+      "description": "When the work order was completed.",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "clean_seal",
       "chartType": "datetime",
-      "groupBy": "date_trunc('month', casecreateddate)",
-      "triggerField": "casecreateddate"
-    }
+      "groupBy": "date_trunc('month', workordercompleteddate)",
+      "triggerField": "workordercompleteddate",
+      "baseFilters": [
+        {
+          "field": "workordercompleteddate",
+          "expression": {
+          "type": "!=",
+            "value": null
+         }
+       }
+     ]
+  }
 ],
   [
     {
