try removing nulls
trying tim's suggestion in hopes to load timeline chart

--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -21,8 +21,8 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
         {
           "field": "workordercompleteddate",
           "expression": {
-          "type": "!=",
-            "value": ""
+          "type": "is not",
+            "value": null
          }
        }
      ]
