--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -71,7 +71,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f
       "description": "L&I descriptor of the type of work permitted.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "li_permits",
+      "dataset": "permits",
       "chartType": "bar",
       "groupBy": "permitdescription"
     }
