--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -43,7 +43,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f8
       "groupBy": "dc_dist",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+police_districts&format=geojson",
       "boundariesLabel": "dist_num",
-      "boundariesId": "dist_num"
+      "boundariesId": "dist_numc"
     }
   ],
   [
