--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -40,10 +40,10 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f8
       "domain": "phl.carto.com",
       "dataset": "incidents_part1_part2",
       "chartType": "choropleth",
-      "groupBy": "dist_num",
+      "groupBy": "dc_dist",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+police_districts&format=geojson",
       "boundariesLabel": "dist_num",
-      "boundariesId": "dist_numc"
+      "boundariesId": "dist_num"
     }
   ],
   [
