--- a/pages/crime-incidents.html
+++ b/pages/crime-incidents.html
@@ -41,9 +41,9 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f8
       "dataset": "incidents_part1_part2",
       "chartType": "choropleth",
       "groupBy": "dc_dist",
-      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+police_districts&format=geojson",
+      "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*,+dist_num::text+as+dist_num_text+from+police_districts&format=geojson",
       "boundariesLabel": "dist_num",
-      "boundariesId": "dist_num::text"
+      "boundariesId": "dist_num_text"
     }
   ],
   [
