--- a/pages/shooting-victims.html
+++ b/pages/shooting-victims.html
@@ -48,7 +48,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5719551277d6389f3005a61
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "shootings",
-      "order": "date_ asc",
+      "order": "date_ desc",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
