--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -1,22 +1,3 @@
----
-title: L&I building and zoning permits
-description: |
-
-  The Department of Licenses & Inspections reviews construction plans and
-    conducts building inspections to ensure the safety of the workers and
-    the public. Zoning permits are issued to authorize new construction or
-    additions to a building or to authorize the change of use in a building
-    or ground. Building permits are required before the start of a specific
-    construction activity to enlarge, repair, change, add to or demolish a
-    structure, and to install equipment or systems in a structure. Depending on
-    the scale or type of construction activity, it may need to be first
-    authorized via a zoning permit. Plumbing and electrical permits, among
-    others, may also be required for new or existing buildings.For more information,
-    please visit: http://www.phila.gov/li/Pages/PermitsCertificates.aspx
-
-download: https://www.opendataphilly.org/dataset/licenses-and-inspections-building-permits
-metadata: https://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f8f/representationdetails/5e9a01ac801624001585ca11/
----
 [
   [
     {
@@ -71,7 +52,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f
       "description": "L&I descriptor of the type of work permitted.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "permits",
+      "dataset": "li_permits",
       "chartType": "bar",
       "groupBy": "permitdescription"
     }
@@ -102,6 +83,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "permitissuedate desc",
       "dataset": "permits",
       "columnsToHide": [
         "cartodb_id",
