--- a/pages/li-building-permits.html
+++ b/pages/li-building-permits.html
@@ -102,6 +102,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543868920583086178c4f
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "permitissuedate desc",
       "dataset": "permits",
       "columnsToHide": [
         "cartodb_id",
