--- a/pages/li-business-licenses.html
+++ b/pages/li-business-licenses.html
@@ -73,6 +73,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865a20583086178c4e
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "mostrecentissuedate desc",
       "dataset": "business_licenses",
       "columnsToHide": [
         "cartodb_id",
