--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -85,6 +85,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "casecompleteddate desc",
       "dataset": "clean_seal",
       "columnsToHide": [
         "cartodb_id",
