--- a/pages/li-commercial-activity-licenses.html
+++ b/pages/li-commercial-activity-licenses.html
@@ -64,6 +64,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6f5c4ae4cd66d3ff
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "issuedate desc",
       "dataset": "com_act_licenses",
       "columnsToHide": [
         "cartodb_id",
