--- a/pages/li-complaints.html
+++ b/pages/li-complaints.html
@@ -89,6 +89,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca6d5c4ae4cd66d3ff
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "complaintdate desc",
       "dataset": "complaints",
       "columnsToHide": [
         "cartodb_id",
