--- a/pages/li-demolitions.html
+++ b/pages/li-demolitions.html
@@ -86,6 +86,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/58dbd271fe779d33cf0e8c
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "completed_date desc",
       "dataset": "demolitions",
       "columnsToHide": [
         "cartodb_id",
