--- a/pages/li-imminently-dangerous.html
+++ b/pages/li-imminently-dangerous.html
@@ -58,6 +58,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca7a5c4ae4cd66d3ff
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "casecompleteddate desc",
       "dataset": "imm_dang",
       "columnsToHide": [
         "cartodb_id",
