--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -66,6 +66,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "investigationcompleted desc",
       "dataset": "case_investigations",
       "columnsToHide": [
         "cartodb_id",
