--- a/pages/li-inspections.html
+++ b/pages/li-inspections.html
@@ -16,7 +16,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca785c4ae4cd66d3ff
       "dataset": "case_investigations",
       "chartType": "datetime",
       "groupBy": "date_trunc('month', investigationcompleted)",
-      "triggerField": "investigationcompleted"
+      "triggerField": "investigationcompleted",
       "baseFilters": [
           {
             "field": "investigationcompleted",
