--- a/pages/li-violations.html
+++ b/pages/li-violations.html
@@ -76,6 +76,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca7a5c4ae4cd66d3ff
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
+      "order": "casecompleteddate desc",
       "dataset": "violations",
       "columnsToHide": [
         "cartodb_id",
