--- a/pages/payments.html
+++ b/pages/payments.html
@@ -81,7 +81,7 @@ metadata: http://metadata.phila.gov/index.html#home/datasetdetails/5c4243d6a074d
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "city_payments_fy2017",
-      "order": "sub_obj_title",
+      "order": "check_date desc",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
