--- a/pages/real-estate-transfers.html
+++ b/pages/real-estate-transfers.html
@@ -18,7 +18,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
 		"dataset": "RTT_SUMMARY",
 		"groupBy": "date_trunc('month',display_date)",
 		"triggerField": "display_date",
-	"baseFilters": [
+	  "baseFilters": [
         {
           "field": "display_date",
           "expression": {
@@ -78,7 +78,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5a04b8d39202605970a7457
     "provider": "carto",
     "domain": "phl.carto.com",
     "dataset": "RTT_SUMMARY",
-    "order": "display_date",
+    "order": "display_date desc",
     "baseFilters": [
           {
             "field": "display_date",
