--- a/pages/shooting-victims.html
+++ b/pages/shooting-victims.html
@@ -28,7 +28,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5719551277d6389f3005a61
       "chartType": "choropleth",
       "groupBy": "dist",
       "boundaries": "https://phl.carto.com/api/v2/sql?q=select+*+from+police_districts&format=geojson",
-      "boundariesLabel": "location",
+      "boundariesLabel": "dist",
       "boundariesId": "dist_numc"
     },
     {
