--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -19,11 +19,18 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "triggerField": "department_name",
       "aggregateFunction": "sum",
       "aggregateField": "annual_salary"
+      "baseFilters": [
+       {
+         "field": "annual_salary",
+         "expression": {
+         "type": "is not",
+           "value": null
+        }
     }
   ],
   [
     {
-      "title": "Total YTD Overtimes Gross by Department",
+      "title": "Total YTD Overtime Gross by Department",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
