--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -31,7 +31,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "groupBy": "department_name",
       "triggerField": "department_name",
       "aggregateFunction": "sum",
-      "aggregateField": "overtime_gross_pay_qtd as numeric"
+      "aggregateField": "overtime_gross_pay_qtd"
     }
   ],
   [
