--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -14,6 +14,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
+      "order": "BASE_PAY desc",
       "chartType": "bar",
       "groupBy": "department_name",
       "triggerField": "department_name",
@@ -27,6 +28,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
+      "order": "overtime_gross_pay_qtd desc",
       "chartType": "bar",
       "groupBy": "department_name",
       "triggerField": "department_name",
