adjust field name

--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -14,7 +14,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
-      "order": "BASE_PAY desc",
+      "order": "annual_salary desc",
       "chartType": "bar",
       "groupBy": "department_name",
       "triggerField": "department_name",
@@ -24,7 +24,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
   ],
   [
     {
-      "title": "Total YTD Overtime Gross by Department",
+      "title": "Total QTD Overtime Gross by Department",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
