--- a/pages/li-clean-seal.html
+++ b/pages/li-clean-seal.html
@@ -9,26 +9,25 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543ca725c4ae4cd66d3ff
 [
   [
     {
-      "title": "Total base pay by department",
+      "title": "Work Order Completed Date",
+      "description": "When the work order was completed.",
       "provider": "carto",
       "domain": "phl.carto.com",
-      "dataset": "latest_employee_earnings",
-      "chartType": "bar",
-      "groupBy": "department_name",
-      "triggerField": "department_name",
-      "aggregateFunction": "sum",
-      "aggregateField": "annual_salary",
+      "dataset": "clean_seal",
+      "chartType": "datetime",
+      "groupBy": "date_trunc('month', workordercompleteddate)",
+      "triggerField": "workordercompleteddate",
       "baseFilters": [
-       {
-         "field": "workordercompleteddate",
-         "expression": {
-         "type": "is not",
-           "value": null
-        }
-      }
+        {
+          "field": "workordercompleteddate",
+          "expression": {
+          "type": "is not",
+            "value": null
+         }
+       }
      ]
-    }
-  ],
+  }
+],
   [
     {
       "title": "Clean & Seal Review Status",
