--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -30,9 +30,19 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "chartType": "bar",
       "groupBy": "department_name",
       "triggerField": "department_name",
-      "order": "annual_salary desc",
       "aggregateFunction": "sum",
-      "aggregateField": "overtime_gross_pay_qtd"
+      "aggregateField": "overtime_gross_pay_qtd",
+      "baseFilters": [
+        {
+          "field": "department_name",
+          "expression": {
+          "type": "is not",
+            "value": null
+         }
+       }
+     ]
+  }
+],
     }
   ],
   [
