--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -34,7 +34,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "aggregateField": "overtime_gross_pay_qtd",
       "baseFilters": [
         {
-          "field": "department_name",
+          "field": "overtime_gross_pay_qtd",
           "expression": {
           "type": "is not",
             "value": null
