--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -19,7 +19,16 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "triggerField": "department_name",
       "aggregateFunction": "sum",
       "aggregateField": "annual_salary"
-    }
+      "baseFilters": [
+        {
+          "field": "annual_salary",
+          "expression": {
+          "type": "is not",
+            "value": null
+         }
+       }
+     ]
+   }
   ],
   [
     {
