--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -18,7 +18,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "groupBy": "department_name",
       "triggerField": "department_name",
       "aggregateFunction": "sum",
-      "aggregateField": "annual_salary"
+      "aggregateField": "annual_salary",
       "baseFilters": [
         {
           "field": "annual_salary",
