--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -10,7 +10,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
 [
   [
     {
-      "title": "Total base salary by department",
+      "title": "Total Base Salary by Department",
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
@@ -54,7 +54,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
 ],
   [
     {
-      "title": "Employee Salaries",
+      "title": "Employee Earnings",
       "chartType": "table",
       "provider": "carto",
       "domain": "phl.carto.com",
