--- a/pages/employee-salaries.html
+++ b/pages/employee-salaries.html
@@ -1,5 +1,5 @@
 ---
-title: ARCHIVED: Employee Salaries & Overtime Calendar Year (CY) 2016 - CY2019 Q1
+title: ARCHIVED - Employee Salaries & Overtime Calendar Year (CY) 2016 - CY2019 Q1
 description: |
   <p>Notes: This dataset will receive no further updates. Please see the
     Employee Earnings dataset for more recent compensation information.
