--- a/pages/employee-salaries.html
+++ b/pages/employee-salaries.html
@@ -1,9 +1,7 @@
 ---
-title: 
+title: ARCHIVED - Employee Salaries & Overtime Calendar Year (CY) 2016 - CY2019 Q1
 description: |
-  <p>Notes: This dataset will receive no further updates. Please see the
-    Employee Earnings dataset for more recent compensation information.
-    Since employee counts fluctuate throughout the year, the sum of annual
+  <p>Notes: Since employee counts fluctuate throughout the year, the sum of annual
     salaries does not reflect the total budgeted amount. Also,
     $0 annual salaries represent part-time, temporary, or seasonal employees paid
     by the hour.</p>
