--- a/pages/employee-earnings.html
+++ b/pages/employee-earnings.html
@@ -59,7 +59,7 @@ metadata: https://metadata.phila.gov/#home/datasetdetails/5543865520583086178c4e
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "latest_employee_earnings",
-      "order": "base_salary desc",
+      "order": "base_salary desc nulls last",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
