reorder table sort default
show latest records first and push nulls to bottom of table

--- a/pages/property-assessments.html
+++ b/pages/property-assessments.html
@@ -66,6 +66,7 @@ metadata: http://metadata.phila.gov/#home/datasetdetails/5543865f20583086178c4ee
       "provider": "carto",
       "domain": "phl.carto.com",
       "dataset": "opa_properties_public",
+      "order": "recording_date desc nulls last",
       "columnsToHide": [
         "cartodb_id",
         "objectid",
